Fix InaccessibleObjectException for container