@@ -8,6 +8,6 @@ RUN echo "export PATH=$PATH:$JAVA_HOME/bin" >> ~/.zshrc
 RUN source ~/.zshrc
 
 COPY target/edhmatch-0.0.1-SNAPSHOT.jar edhmatch.jar
-ENTRYPOINT ["java", "-jar", "edhmatch.jar"]
+ENTRYPOINT ["java", "--add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED", "-jar", "edhmatch.jar"]
 
 
